<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context=".feature.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_124"
            android:text="@string/entrance"
            android:textAppearance="@style/AndroidHeadline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            android:text="@string/email"
            android:textAppearance="@style/AndroidTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />

        <EditText
            android:id="@+id/et_email_input"
            style="@style/InputsMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginTop="@dimen/margin_8"
            android:autofillHints="emailAddress"
            android:hint="@string/example_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_title" />

        <TextView
            android:id="@+id/tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/password"
            android:textAppearance="@style/AndroidTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_input" />

        <EditText
            android:id="@+id/et_password_input"
            style="@style/InputsMedium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_marginTop="@dimen/margin_8"
            android:autofillHints="password"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_title" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:backgroundTint="@color/green"
            android:text="@string/entrance"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_input" />

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="end"
            android:text="@string/no_account"
            android:textAppearance="@style/ButtonTextSmall"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/tv_registration_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/tv_registration_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/registration"
            android:textAppearance="@style/ButtonTextSmall"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_no_account"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/tv_forgot_password_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAppearance="@style/ButtonTextSmall"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_account" />

        <View
            android:id="@+id/stroke"
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_height_1"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@color/stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_btn" />

        <ImageButton
            android:id="@+id/btn_vk"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_40"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/vk_bg_btn"
            android:contentDescription="@string/vk_ru"
            android:scaleType="center"
            android:src="@drawable/ic_vk"
            app:layout_constraintCircleRadius="@dimen/radius_30"
            app:layout_constraintEnd_toStartOf="@id/btn_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stroke" />

        <ImageButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_40"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_32"
            android:background="@drawable/ok_bg_btn"
            android:contentDescription="@string/vk_ru"
            android:scaleType="center"
            android:src="@drawable/ic_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_vk"
            app:layout_constraintTop_toBottomOf="@+id/stroke" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>